@@ -58,6 +58,7 @@ bool ScriptCallStack::callLocation(String* sourceName, int* sourceLineNumber, St
     if (stackTrace.IsEmpty())
         return false;
     if (stackTrace->GetFrameCount() <= 0) {
+        // Successfully grabbed stack trace, but there are no frames.
         // Fallback to setting lineNumber to 0, and source and function name to "undefined".
         *sourceName = toWebCoreString(v8::Undefined());
         *sourceLineNumber = 0;
@@ -65,9 +66,13 @@ bool ScriptCallStack::callLocation(String* sourceName, int* sourceLineNumber, St
         return true;
     }
     v8::Handle<v8::StackFrame> frame = stackTrace->GetFrame(0);
-    *sourceName = toWebCoreString(frame->GetScriptName());
+    // There must be at least one valid frame.
+    ASSERT(!frame.IsEmpty());
+    v8::Local<v8::String> sourceNameValue(frame->GetScriptName());
+    v8::Local<v8::String> functionNameValue(frame->GetFunctionName());
+    *sourceName = sourceNameValue.IsEmpty() ? "" : toWebCoreString(sourceNameValue);
+    *functionName = functionNameValue.IsEmpty() ? "" : toWebCoreString(functionNameValue);
     *sourceLineNumber = frame->GetLineNumber();
-    *functionName = toWebCoreString(frame->GetFunctionName());
     return true;
 }
 
